deploy/k8s/gateway.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mics-gateway
  labels:
    app: mics-gateway
spec:
  selector:
    app: mics-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
